@@ -1,3 +1,11 @@
+Thu Feb 17 09:04:19 2000  Gray Watson  <gray@burger.256.com>
+
+	* Fixed Makefile.dep creation with _th.o special objects.
+
+	* Fixed the outputting of gratuitous colons.
+
+	* Added @uref texinfo tags and new texinfo.tex.
+
 Mon Nov  8 15:39:44 1999  Gray Watson  <gray@burger.256.com>
 
 	* Releasing dmalloc version 4.3.0.
@@ -1504,5 +1512,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.228 1999/11/08 20:42:55 gray Exp $
+$Id: ChangeLog,v 1.229 2000/02/17 14:06:05 gray Exp $
 -------------------------------------------------------------------------------
